@@ -4,6 +4,7 @@
 	* src/nano.c (main): For second or later files on the command line,
 	only check the position history when option 'positionlog' is set.
 	This fixes a bug that was unconsciously reported by Mike Frysinger.
+	* src/files.c (do_lockfile): Plug a couple of memory leaks.
 
 2016-01-26  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (update_poshistory): Do not add directories to the
